# AI-healthcare-evidence-platform

./: README.md  app.py  main.py  pyproject.toml  self note.txt  test.ipynb
functions/: clinicaltrials_articles.py  diagnosis_symptoms.py  pubmed_articles.py  summarize_clinicaltrials.py  summerize_pubmed.py  symptom_extractor.py
